# qgis_vlayers

./: CMakeLists.txt  Makefile  README.html  README.md  README.txt  __init__.py  common.h  metadata.txt  qgis_vtable.py  qgsembeddedlayerselect.ui  qgsembeddedlayerselectdialog.cpp  qgsembeddedlayerselectdialog.h  qgssql.cpp  qgssql.h  qgssqllexer.ll  qgssqlparser.yy  qgsvirtuallayerdefinition.cpp  qgsvirtuallayerdefinition.h  qgsvirtuallayerfeatureiterator.cpp  qgsvirtuallayerfeatureiterator.h  qgsvirtuallayerprovider.cpp  qgsvirtuallayerprovider.h  qgsvirtuallayersourceselect.cpp  qgsvirtuallayersourceselect.h  qgsvirtuallayersourceselectbase.ui  sqlite_helper.h  test_parser.cpp  vlayer_module.cpp  vlayer_module.h  vlayer_plugin.cpp  vlayer_plugin.h  vtable_ext.c  vtablesupport.py  vtablesupportdialog.py
cmake/: FindQGIS.cmake  PyQt4Macros.cmake
cpp/: CMakeLists.txt  common.h  qgsembeddedlayerselectdialog.cpp  qgslinkedlayerselect.ui  qgslinkedlayerselectdialog.cpp  qgslinkedlayerselectdialog.h  qgssql.cpp  qgssql.h  qgssqllexer.ll  qgssqlparser.yy  qgsvirtuallayerdefinition.cpp  qgsvirtuallayerdefinition.h  qgsvirtuallayerfeatureiterator.cpp  qgsvirtuallayerfeatureiterator.h  qgsvirtuallayerprovider.cpp  qgsvirtuallayerprovider.h  qgsvirtuallayersourceselect.cpp  qgsvirtuallayersourceselect.h  qgsvirtuallayersourceselectbase.ui  test_parser.cpp  vlayer_module.c  vlayer_module.cpp  vlayer_module.h  vlayer_plugin.cpp  vlayer_plugin.h  vlayer_plugin.qrc  vtable.cpp  vtable.h  vtable_ext.c
cpp/db_manager_vlayers/: resources.qrc
cpp/test/: test.sh  test_qgsvirtuallayerprovider.py
db_manager_vlayers/: CMakeLists.txt  connector.py  data_model.py  info_model.py  plugin.py  sql_dictionary.py
old_python_poc/: Makefile  qgis_vtable.py  vtablesupport.py
python/: README.txt  resources.qrc  ui_vtablesupport.ui
test/: test.sh  test_parser.cpp  test_qgsvirtuallayerprovider.py
testdata/: france_parts.dbf  points.qix
